@@ -17,6 +17,18 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+operator|.
+name|Entry
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -62,22 +74,33 @@ name|c
 parameter_list|)
 block|{
 name|super
-argument_list|(
-name|c
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-operator|!
-operator|(
-name|c
-operator|instanceof
-name|HBaseConfiguration
-operator|)
-condition|)
-block|{
-name|addHbaseResources
 argument_list|()
+expr_stmt|;
+for|for
+control|(
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|e
+range|:
+name|c
+control|)
+block|{
+name|set
+argument_list|(
+name|e
+operator|.
+name|getKey
+argument_list|()
+argument_list|,
+name|e
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
 expr_stmt|;
 block|}
 block|}
